# hands_on_maniskill

./: .gitignore  .gitmodules  TODO.md
custom_robots/: agibot_g1.py  test_g1.py
custom_robots/scripts/: camera_api_example.py  check_joint_type.py  head_camera_example.py  head_camera_final.py  interactive_viewer_example.py  list_active_joints_map.py  move_active_joints.py  render_examples.py  simple_head_camera.py  working_head_camera.py
docker/: Dockerfile  README.md  build.sh  into.sh  start_gui.sh  start_headless.sh
quick_start/: run_a_quick_task.py
robot_descriptions/agibot_g1_description/meshes/arm/: materials.mtl
robot_descriptions/agibot_g1_description/meshes/base/: base.mtl  head_link1.mtl
robot_descriptions/agibot_g1_description/urdf/: agibot_g1.urdf  agibot_g1_omni-picker.urdf
robot_descriptions/agibot_g1_with_gripper_description/: agibot_g1_with_120s.urdf  agibot_g1_with_omnipicker.urdf
robot_descriptions/agibot_g1_with_gripper_description/meshes/base/: body_link1.mtl  body_link2.mtl  head_link2.mtl  wheel.mtl
robot_descriptions/agibot_g1_with_gripper_description/meshes/camera/: materials.mtl
robot_descriptions/agibot_g1_with_gripper_description/meshes/crt_120s/: Left_00_Link.STL  Left_01_Link.STL  Left_1_Link.STL  Left_2_Link.STL  Left_Pad_Link.STL  Left_Support_Link.STL  Right_00_Link.STL  (+6 more)
robot_descriptions/agibot_omni_description/: CMakeLists.txt  README.md  package.xml
robot_descriptions/agibot_omni_description/xacro/: gripper.xacro  omni_picker.xacro
robot_descriptions/agibot_omni_description/xacro/ros2_control/: omni_picker.xacro
(+1 files in other folders)
